kubernetes-services/additions/prometheus/grafana-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
spec:
  hosts:
    - "*"
  gateways:
    - istio-gateway/non-tls-gateway
  http:
    - match:
        - uri:
            prefix: /grafana/
        - uri:
            exact: /grafana
      route:
        - destination:
            host: prometheus-grafana
            port:
              number: 80
